--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,3 +1,5 @@
+/* Estilos padrão */
+
 *{
     margin: 0;
     padding: 0;
@@ -6,64 +8,76 @@
     text-decoration: none;
     list-style: none;
 }
+
 body{
     background: #28c16f;
     overflow: hidden;
 }
+
 .header{
     position: fixed;
     width: 100%;
     padding: 40px 60px;
 }
+
 .navigation{
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
+
 .logo{
     font-size: 2.5rem;
     font-weight: bold;
     color: #fff;
 }
+
 .navigation ul{
     display: flex;
     align-items: center;
     gap: 60px;
 }
+
 .navigation ul li a{
     color: #fff;
     font-size: 1.2rem;
     transition: all .1s ease;
 }
+
 .navigation ul li a:hover{
     border-bottom: 3px solid #fff;
 }
+
 .main{
     overflow: hidden;
 }
+
 .section{
     padding: 8rem;
     height: 100vh;
-
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
+
 .left{
     display: flex;
     flex-direction: column;
     align-items: flex-start;
 }
+
 .left p{
     font-size: 2.2rem;
     color: #fff;
     margin-bottom: 10px;
 }
+
 .left h4{
     font-size: 3.5rem;
     color: #1c683f;
     margin-bottom: 3rem;
 }
+
 .btn{
     padding: 1.5rem 5rem;
     background: #1c683f;
@@ -73,14 +87,17 @@ body{
     font-weight: 700;
     transition: all 0.3s ease;
 }
+
 .btn:hover{
     box-shadow: 0 1px 4px #1c683f;
 }
+
 .right img{
     width: 500px;
     margin-bottom: 1rem;
     animation: float 1.8s infinite alternate;
 }
+
 .shadow{
     width: 450px;
     height: 45px;
@@ -90,6 +107,7 @@ body{
     filter: blur(5px);
     animation: shadow 1.8s infinite alternate;
 }
+
 @keyframes float{
     0%{
         transform: translateY(0);
@@ -98,6 +116,7 @@ body{
         transform: translateY(15px);
     }
 }
+
 @keyframes shadow{
     0%{
         transform: scale(1.1);
@@ -106,3 +125,32 @@ body{
         transform: scale(.85,.85);
     }
 }
+
+/* Media queries */
+
+/* Estilos para telas menores que 768px (tamanhos de celular) */
+@media only screen and (max-width: 767px) {
+  .header {
+    padding: 20px 30px;
+  }
+
+  .navigation ul {
+    display: none;
+  }
+
+  .logo {
+    font-size: 2rem;
+  }
+
+  .navigation {
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .navigation button {
+    font-size: 1.5rem;
+    color: #fff;
+    background-color: transparent;
+    border: none;
+  }
+ }
